--- a/index.html
+++ b/index.html
@@ -5,19 +5,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>The-Boolean</title>
 </head>
 <body>
   
-  <header></header> 
-  <section class="main"></section>
-  <section class="article"></section>
-  <footer></footer>
+  <div id="header">
+  <img src="img/logo.svg" id="logo" alt="">
+  </div> 
+<div class="container">
+
+  <div class="content">
+  <h1>Internet deve essere al servizio del "bene pubblico:
+    il manifesto di Tim Berners-Lee</h1>
+  <h5>Autore</h5>
+  <h6>data</h6>
+
+  <div class="gallery">
+   <img src="img/tim-1.jpg" alt="">
+   <img src="img/tim-2.jpg" alt="">
+  </div>
+  <section>
+    Descrizione delle due foto sopra
+  </section>
+  <div class="content">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+  Sed ultricies laoreet augue ac sollicitudin. Aliquam vulputate
+  metus arcu, ut pretium felis sodales ac. Nam est ipsum, tincidunt 
+ in pharetra non, molestie eu lectus. Aliquam nunc ligula, commodo
+  blandit finibus vitae, fermentum sed ante. Pellentesque tortor
+  augue, dictum eget turpis mollis, lobortis pharetra dolor.
+   Integer pharetra mi sit amet molestie tempus. Proin non 
+  justo vulputate, scelerisque purus in, mollis mi. Sed semper
+  lectus et nunc dictum maximus. Sed a justo at arcu euismod 
+  euismod a commodo tortor. Cras semper mi mi, non lacinia 
+  ante porta ac. Sed vehicula arcu in fringilla commodo.</p>
+  </div>
+  <div class="content">
+   <ul>
+     <li>Morbi felis nisi, iaculis et pharetra sit amet, imperdiet 
+         quis leo. Donec ut lacus a sapien laoreet porttitor non id 
+         felis. Pellentesque ut nisi eros. Pellentesque habitant</li>
+
+     <li>Morbi posuere tempor mauris, eget pellentesque mauris ornare
+        nec. Aliquam velit ex, interdum eget turpis quis, maximus 
+        sollicitudin mauris. Nulla ac tincidunt nisl, sed elementum 
+        urna.</li>
+
+      <li>Integer nisi nibh, bibendum a consectetur vel, dignissim 
+          eu risus</li>
+   </ul>
+  </div>
+
+  <div class="table">
+
+    <table class="tabella">
+      <tr>
+        <th>Lorem ipsum dolor</th>
+        <th>Lorem ipsum dolor</th> 
+        <th>Lorem ipsum dolor</th>
+      </tr>
+      <tr>
+        <td>Lorem ipsum dolor</td>
+        <td>Lorem ipsum dolor</td>
+        <td>Lorem ipsum dolor</td>
+      </tr>
+      <tr>
+        <td>Lorem ipsum dolor</td>
+        <td>Lorem ipsum dolor</td>
+        <td>Lorem ipsum dolor</td>
+      </tr>
+      <tr>
+        <td>Lorem ipsum dolor</td>
+        <td>Lorem ipsum dolor</td>
+        <td>Lorem ipsum dolor</td>
+      </tr>
+    </table>
+
+  </div>
+
+  <div class="content">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      Sed ultricies laoreet augue ac sollicitudin. Aliquam vulputate
+      metus arcu, ut pretium felis sodales ac. Nam est ipsum, tincidunt 
+     in pharetra non, molestie eu lectus. Aliquam nunc ligula, commodo
+      blandit finibus vitae, fermentum sed ante. Pellentesque tortor
+      augue, dictum eget turpis mollis, lobortis pharetra dolor.
+       Integer pharetra mi sit amet molestie tempus. Proin non 
+      justo vulputate, scelerisque purus in, mollis mi. Sed semper
+      lectus et nunc dictum maximus. Sed a justo at arcu euismod 
+      euismod a commodo tortor. Cras semper mi mi, non lacinia 
+      ante porta ac. Sed vehicula arcu in fringilla commodo.</p>
+      </div>
 
 
+  <footer>
+    <h3>Potrebbero interessarti</h3>
+    
+   <div class="frame1">
+    Lorem Ipsum Dolor
+     </div>
 
-
-
+   <div class="frame2">
+      Lorem Ipsum Dolor
+   </div>
+  </footer>
 
 </body>
 </html>
