--- a/index.html
+++ b/index.html
@@ -8,39 +8,51 @@
     <link rel="stylesheet" href="style.css">
     <title>The-Boolean</title>
 </head>
+
 <body>
   
   <div id="header">
   <img src="img/logo.svg" id="logo" alt="">
   </div> 
+
 <div class="container">
 
+
+
   <div class="content">
-  <h1>Internet deve essere al servizio del "bene pubblico:
-    il manifesto di Tim Berners-Lee</h1>
-  <h5>Autore</h5>
-  <h6>data</h6>
+   <h1>Internet deve essere al servizio del "bene pubblico:
+       il manifesto di Tim Berners-Lee</h1>
+     <h2>Scritto da <font color="skyblue">The Booleaner</font></h2>
+     <h3>il 22/02/2021</h3>
+  </div>
 
   <div class="gallery">
-   <img src="img/tim-1.jpg" alt="">
-   <img src="img/tim-2.jpg" alt="">
+     <img src="img/tim-1.jpg" alt="">
+     <img src="img/tim-2.jpg" alt="">
   </div>
+
   <section>
-    Descrizione delle due foto sopra
+    <h5>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
+      <br> 2nd Phot: Wikimedia by Paul Clarke
+    </h5>
   </section>
+
+
   <div class="content">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-  Sed ultricies laoreet augue ac sollicitudin. Aliquam vulputate
-  metus arcu, ut pretium felis sodales ac. Nam est ipsum, tincidunt 
- in pharetra non, molestie eu lectus. Aliquam nunc ligula, commodo
-  blandit finibus vitae, fermentum sed ante. Pellentesque tortor
-  augue, dictum eget turpis mollis, lobortis pharetra dolor.
-   Integer pharetra mi sit amet molestie tempus. Proin non 
-  justo vulputate, scelerisque purus in, mollis mi. Sed semper
-  lectus et nunc dictum maximus. Sed a justo at arcu euismod 
-  euismod a commodo tortor. Cras semper mi mi, non lacinia 
-  ante porta ac. Sed vehicula arcu in fringilla commodo.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+       Sed ultricies laoreet augue ac sollicitudin. Aliquam vulputate
+       metus arcu, ut pretium felis sodales ac. Nam est ipsum, tincidunt 
+       in pharetra non, molestie eu lectus. Aliquam nunc ligula, commodo
+       blandit finibus <mark> vitae, fermentum sed ante. Pellentesque tortor
+       augue, dictum eget turpis mollis,</mark> lobortis pharetra dolor.
+        Integer pharetra mi sit amet molestie tempus. Proin non 
+       justo vulputate, scelerisque purus in, mollis mi. Sed semper
+       lectus et nunc dictum maximus. Sed a justo at arcu euismod 
+       euismod a commodo tortor. Cras semper mi mi, non lacinia 
+       ante porta ac. Sed vehicula arcu in fringilla commodo.</p>
   </div>
+
+
   <div class="content">
    <ul>
      <li>Morbi felis nisi, iaculis et pharetra sit amet, imperdiet 
@@ -57,7 +69,7 @@
    </ul>
   </div>
 
-  <div class="table">
+  <div class="content">
 
     <table class="tabella">
       <tr>
@@ -68,17 +80,26 @@
       <tr>
         <td>Lorem ipsum dolor</td>
         <td>Lorem ipsum dolor</td>
+        <td>Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. Sed
+          ultricies laoreet augue ac sollicitudin.
+           Aliquam vulputate metus arcu</td>
+      </tr>
+      <tr>
+        <td>Lorem ipsrum dolo</td>
         <td>Lorem ipsum dolor</td>
+        <td>Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. Sed
+          ultricies laoreet augue ac sollicitudin.
+           Aliquam vulputate metus arcu</td>
       </tr>
       <tr>
         <td>Lorem ipsum dolor</td>
         <td>Lorem ipsum dolor</td>
-        <td>Lorem ipsum dolor</td>
-      </tr>
-      <tr>
-        <td>Lorem ipsum dolor</td>
-        <td>Lorem ipsum dolor</td>
-        <td>Lorem ipsum dolor</td>
+        <td>Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. Sed
+          ultricies laoreet augue ac sollicitudin.
+           Aliquam vulputate metus arcu</td>
       </tr>
     </table>
 
@@ -89,8 +110,8 @@
       Sed ultricies laoreet augue ac sollicitudin. Aliquam vulputate
       metus arcu, ut pretium felis sodales ac. Nam est ipsum, tincidunt 
      in pharetra non, molestie eu lectus. Aliquam nunc ligula, commodo
-      blandit finibus vitae, fermentum sed ante. Pellentesque tortor
-      augue, dictum eget turpis mollis, lobortis pharetra dolor.
+      blandit finibus vitae, <mark>fermentum sed ante. Pellentesque tortor
+      augue, dictum eget turpis mollis, lobortis pharetra</mark> dolor.
        Integer pharetra mi sit amet molestie tempus. Proin non 
       justo vulputate, scelerisque purus in, mollis mi. Sed semper
       lectus et nunc dictum maximus. Sed a justo at arcu euismod 
@@ -98,18 +119,26 @@
       ante porta ac. Sed vehicula arcu in fringilla commodo.</p>
       </div>
 
+ 
 
-  <footer>
-    <h3>Potrebbero interessarti</h3>
-    
-   <div class="frame1">
-    Lorem Ipsum Dolor
-     </div>
+   <footer>
 
-   <div class="frame2">
-      Lorem Ipsum Dolor
-   </div>
-  </footer>
+    <h4>Potrebbero interessarti</h4>
 
+    <div class="frame">
+
+      <div class="frame1">
+       Lorem Ipsum dolor
+      </div>
+
+      <div class="frame2">
+       Lorem Ipsum dolor
+      </div>
+
+    </div>
+
+   </footer>
+
+ </div>
 </body>
 </html>
