--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 
 
   <div class="content">
-   <h1>Internet deve essere al servizio del "bene pubblico:
+   <h1>Internet deve essere al servizio del "bene pubblico" :
        il manifesto di Tim Berners-Lee</h1>
      <h2>Scritto da <font color="skyblue">The Booleaner</font></h2>
      <h3>il 22/02/2021</h3>
   
 
-  <div class="gallery">
-     <img src="img/tim-1.jpg" alt="">
-     <img src="img/tim-2.jpg" alt="">
+  <div class="gallery" id="photo1">
   </div>
+  <div class="gallery" id="photo2">
+ </div>
 
-  <section>
+  <div class="content">
     <h5>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
       <br> 2nd Phot: Wikimedia by Paul Clarke
     </h5>
-  </section>
+  </div>
 </div>
 
   <div class="content">
@@ -81,25 +81,37 @@
         <td>Lorem ipsum dolor</td>
         <td>Lorem ipsum dolor</td>
         <td>Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. Sed
-          ultricies laoreet augue ac sollicitudin.
-           Aliquam vulputate metus arcu</td>
+          consectetur adipiscing elit.
+          Mauris posuere lobortis metus.
+          Nullam sollicitudin in nisl
+         vitae malesuada. Curabitur
+         in imperdiet magna. Sed vitae
+         hendrerit nibh. Nam nec semper
+         purus, non laoreet nibh.</td>
       </tr>
       <tr>
-        <td>Lorem ipsrum dolo</td>
+        <td>Lorem ipsrum dolor</td>
         <td>Lorem ipsum dolor</td>
         <td>Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. Sed
-          ultricies laoreet augue ac sollicitudin.
-           Aliquam vulputate metus arcu</td>
+          consectetur adipiscing elit.
+          Mauris posuere lobortis metus.
+          Nullam sollicitudin in nisl
+         vitae malesuada. Curabitur
+         in imperdiet magna. Sed vitae
+         hendrerit nibh. Nam nec semper
+         purus, non laoreet nibh.</td>
       </tr>
       <tr>
         <td>Lorem ipsum dolor</td>
         <td>Lorem ipsum dolor</td>
         <td>Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. Sed
-          ultricies laoreet augue ac sollicitudin.
-           Aliquam vulputate metus arcu</td>
+          consectetur adipiscing elit.
+          Mauris posuere lobortis metus.
+          Nullam sollicitudin in nisl
+         vitae malesuada. Curabitur
+         in imperdiet magna. Sed vitae
+         hendrerit nibh. Nam nec semper
+         purus, non laoreet nibh.</td>
       </tr>
     </table>
 
@@ -121,7 +133,7 @@
 
  
 
-   <footer>
+  <footer>
 
     <h5>Potrebbero interessarti</h5>
 
