--- a/index.html
+++ b/index.html
@@ -11,32 +11,30 @@
 
 <body>
   
-  <div id="header">
-  <img src="img/logo.svg" id="logo" alt="">
+  <div class="wrapper" id="header">
+  <img src="img/logo.svg" id="logo" alt="logo del sito">
   </div> 
 
-<div class="container">
-
+<div class="wrapper">
 
 
   <div class="content">
    <h1>Internet deve essere al servizio del "bene pubblico" :
        il manifesto di Tim Berners-Lee</h1>
-     <h2>Scritto da <font color="skyblue">The Booleaner</font></h2>
+     <h2>Scritto da <span>The Booleaner</span></h2>
      <h3>il 22/02/2021</h3>
   
+     <div class="main">
+        <img src="img/tim-1.jpg" class="main-img" alt="Tim Berners foto1">
+        <img src="img/tim-2.jpg" class="main-img" alt="Tim Berners foto2">
+     </div>
 
-  <div class="gallery" id="photo1">
+    <section>
+      <h5>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
+        <br> 2nd Phot: Wikimedia by Paul Clarke
+       </h5>
+    </section>
   </div>
-  <div class="gallery" id="photo2">
- </div>
-
-  <div class="content">
-    <h5>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
-      <br> 2nd Phot: Wikimedia by Paul Clarke
-    </h5>
-  </div>
-</div>
 
   <div class="content">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -51,7 +49,6 @@
        euismod a commodo tortor. Cras semper mi mi, non lacinia 
        ante porta ac. Sed vehicula arcu in fringilla commodo.</p>
   </div>
-
 
   <div class="content">
    <ul>
@@ -129,7 +126,7 @@
       lectus et nunc dictum maximus. Sed a justo at arcu euismod 
       euismod a commodo tortor. Cras semper mi mi, non lacinia 
       ante porta ac. Sed vehicula arcu in fringilla commodo.</p>
-      </div>
+ </div>
 
  
 
